--- a/setup/ocp47/argocd-instance/argocd-instance.yaml
+++ b/setup/ocp47/argocd-instance/argocd-instance.yaml
@@ -125,7 +125,21 @@ spec:
         end
         hs.status = "Progressing"
         hs.message = "Unknown"
-        return hs                  
+        return hs
+    cpd.ibm.com/Ibmcpd:
+      health.lua: |
+        hs = {}
+        if obj.status ~= nil then
+          if obj.status.controlPlaneStatus == "Completed" then
+            hs.status = "Healthy"
+            hs.message = "Control Plane is provisioned"
+            return hs
+          end
+        end
+
+        hs.status = "Progressing"
+        hs.message = "Waiting for certificate"
+        return hs                 
   applicationSet:
     resources:
       limits:
