--- a/0-bootstrap/single-cluster/1-infra/argocd/storage.yaml
+++ b/0-bootstrap/single-cluster/1-infra/argocd/storage.yaml
@@ -18,9 +18,9 @@ spec:
     helm:
       values: |
         ocs-operator:
-          channel: ${CHANNEL}
+          channel: stable-4.8
           sizeGiB: 512
-          storageClass: ${STORCLASS}
+          storageClass: thin
           argo:
             namespace: openshift-gitops
             serviceAccount: openshift-gitops-cntk-argocd-application-controller
