fixed storage class on WS

--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cp4d-watson-studio-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cp4d-watson-studio-instance.yaml
@@ -34,6 +34,6 @@ spec:
       - name: spec.scaleConfig
         value: small
       - name: spec.storageClass
-        value: managed-nfs-storage
+        value: "ocs-storagecluster-cephfs"
       - name: spec.version
         value: "4.0.4"
