--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -25,7 +25,7 @@ resources:
 
 ## Cloud Pak for Data
 - argocd/operators/ibm-cp4d-watson-studio-operator.yaml
-- argocd/instances/ibm-cp4d-watson-studio-instance.yaml
+#- argocd/instances/ibm-cp4d-watson-studio-instance.yaml
 - argocd/operators/ibm-cpd-platform-operator.yaml
 - argocd/operators/ibm-cpd-scheduling-operator.yaml
 - argocd/instances/ibm-cpd-instance.yaml
@@ -53,7 +53,7 @@ resources:
 #- argocd/instances/cert-manager-instance.yaml
 
 # Sealed Secrets
-- argocd/instances/sealed-secrets.yaml
+#- argocd/instances/sealed-secrets.yaml
 
 # CICD
 #- argocd/operators/grafana-operator.yaml
