adds cpd-catalogs

--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -44,7 +44,7 @@ resources:
 
 ## IBM Catalogs
 - argocd/operators/ibm-catalogs.yaml
-
+- argocd/operators/cpd-catalogs.yaml
 
 # Required for IBM MQ
 #- argocd/instances/openldap.yaml
