--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -9,8 +9,8 @@ resources:
 - argocd/namespace-cloudpak.yaml
 #- argocd/namespace-istio-system.yaml
 #- argocd/namespace-openldap.yaml
-- argocd/namespace-sealed-secrets.yaml
-- argocd/namespace-tools.yaml
+#- argocd/namespace-sealed-secrets.yaml
+#- argocd/namespace-tools.yaml
 #- argocd/namespace-instana-agent.yaml
 #- argocd/namespace-robot-shop.yaml
 #- argocd/namespace-openshift-storage.yaml
