--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -24,11 +24,11 @@ resources:
 #- argocd/instances/ibm-process-mining-instance.yaml
 
 ## Cloud Pak for Data
-- argocd/operators/ibm-cp4d-watson-studio-operator.yaml
+#- argocd/operators/ibm-cp4d-watson-studio-operator.yaml
 #- argocd/instances/ibm-cp4d-watson-studio-instance.yaml
-- argocd/operators/ibm-cpd-platform-operator.yaml
-- argocd/operators/ibm-cpd-scheduling-operator.yaml
-- argocd/instances/ibm-cpd-instance.yaml
+#- argocd/operators/ibm-cpd-platform-operator.yaml
+#- argocd/operators/ibm-cpd-scheduling-operator.yaml
+#- argocd/instances/ibm-cpd-instance.yaml
 
 ## Cloud Pak for Security
 #- argocd/operators/ibm-cp4s-operator.yaml
@@ -43,7 +43,7 @@ resources:
 #- argocd/instances/ibm-license-service-instance.yaml
 
 ## IBM Catalogs
-- argocd/operators/ibm-catalogs.yaml
+#- argocd/operators/ibm-catalogs.yaml
 - argocd/operators/cpd-catalogs.yaml
 
 # Required for IBM MQ
