--- a/setup/ocp47/argocd-instance/argocd-instance.yaml
+++ b/setup/ocp47/argocd-instance/argocd-instance.yaml
@@ -145,7 +145,7 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for control plane to finish provisioning"
         return hs
-    cpd.ibm.com/ZenService:
+    zen.cpd.ibm.com/ZenService:
       health.lua: |
         hs = {}
         if obj.status ~= nil then
