--- a/setup/ocp47/argocd-instance/argocd-instance.yaml
+++ b/setup/ocp47/argocd-instance/argocd-instance.yaml
@@ -164,7 +164,7 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for common services to finish provisioning"
         return hs    
-    cpd.ibm.com/WS:
+    ws.cpd.ibm.com/WS:
       health.lua: |
         hs = {}
         if obj.status ~= nil then
@@ -201,7 +201,26 @@ spec:
 
         hs.status = "Progressing"
         hs.message = "Waiting for Common Core Services to finish provisioning"
-        return hs                                                                                         
+        return hs                
+      scheduler.spectrumcomputing.ibm.com/Scheduling:
+      health.lua: |
+        hs = {}
+        if obj.status ~= nil then
+          if obj.status.cpd-schedulingStatus == "Completed" then
+            hs.status = "Healthy"
+            hs.message = "CPD Scheduler is provisioned"
+            return hs
+          end
+          if obj.status.cpd-schedulingStatus == "Failed" then
+            hs.status = "Degraded"
+            hs.message = "CPD Scheduler provisioning has failed"
+            return hs
+          end
+        end
+
+        hs.status = "Progressing"
+        hs.message = "Waiting for CPD Scheduler to finish provisioning"
+        return hs                                                                                                                     
   applicationSet:
     resources:
       limits:
