--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -25,11 +25,11 @@ resources:
 
 ## Cloud Pak for Data
 - argocd/operators/ibm-cp4d-watson-studio-operator.yaml
-- argocd/instances/ibm-cp4d-watson-studio-instance.yaml
+#- argocd/instances/ibm-cp4d-watson-studio-instance.yaml
 - argocd/operators/ibm-cpd-platform-operator.yaml
 - argocd/operators/ibm-cpd-scheduling-operator.yaml
 - argocd/instances/ibm-cpd-scheduler-instance.yaml
-- argocd/instances/ibm-cpd-instance.yaml
+#- argocd/instances/ibm-cpd-instance.yaml
 
 ## Cloud Pak for Security
 #- argocd/operators/ibm-cp4s-operator.yaml
