--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cpd-scheduler-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cpd-scheduler-instance.yaml
@@ -18,9 +18,21 @@ spec:
     repoURL: "" # Populated by kustomize patches in 2-services/kustomization.yaml
     path: instances/ibm-cpd-scheduling-instance
     helm:
-      parameters:
-        - name: storageClass
-          value: "ocs-storagecluster-cephfs"
+      values: |
+        ibm-cpd-scheduling-instance:
+          ibmcpdschedulerinstance:
+            name: ibm-cpd-scheduler
+            spec:
+              version: 1.3.1
+              cluster:
+                pvc:
+                  dynamicStorage: true
+                  size: 10G
+              license:
+                accept: true
+              registry: cp.icr.io/cp/cpd
+              releasename: ibm-cpd-scheduler
+              storageClass: "ocs-storagecluster-cephfs"
   syncPolicy:
     automated:
       prune: true
