updates gitops cluster role for cpd scheduler

--- a/setup/ocp47/custom-argocd-app-controller-clusterrole.yaml
+++ b/setup/ocp47/custom-argocd-app-controller-clusterrole.yaml
@@ -335,3 +335,9 @@ rules:
       - ws.cpd.ibm.com
     resources:
       - ws
+  - verbs:
+      - '*'
+    apiGroups:
+      - scheduler.spectrumcomputing.ibm.com
+    resources:
+      - Scheduling
