--- a/setup/ocp47/argocd-instance/argocd-instance.yaml
+++ b/setup/ocp47/argocd-instance/argocd-instance.yaml
@@ -206,20 +206,20 @@ spec:
       health.lua: |
         hs = {}
         if obj.status ~= nil then
-          if obj.status.cpd-schedulingStatus ~= nil then
-            if obj.status.cpd-schedulingStatus == "Completed" then
+          if obj.status['cpd-schedulingStatus'] ~= nil then
+            if obj.status['cpd-schedulingStatus'] == "Completed" then
               hs.status = "Healthy"
               hs.message = "CPD Scheduler is provisioned"
               return hs
             end
-            if obj.status.cpd-schedulingStatus == "Failed" then
+            if obj.status['cpd-schedulingStatus'] == "Failed" then
               hs.status = "Degraded"
               hs.message = "CPD Scheduler provisioning has failed"
               return hs
             end
           end
         end
-        
+
         hs.status = "Progressing"
         hs.message = "Waiting for CPD Scheduler to finish provisioning"
         return hs                                                                                                                     
