updated ibm-cpd-instance chart

--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cpd-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cpd-instance.yaml
@@ -21,7 +21,7 @@ spec:
     path: instances/ibm-cpd-instance
     helm:
       values: |
-        ibmcpdplatforminstance:
+        ibm-cpd-platform-instance:
           name: ibmcpd-cr
           spec:
             license:
